@@ -6,32 +6,33 @@ import com.sparta.everydrink.domain.comment.entity.Comment;
 import com.sparta.everydrink.domain.comment.repository.CommentRepository;
 import com.sparta.everydrink.domain.post.entity.Post;
 import com.sparta.everydrink.domain.post.repository.PostRepository;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
+import com.sparta.everydrink.domain.user.entity.User;
+import com.sparta.everydrink.domain.user.repository.UserRepository;
+import com.sparta.everydrink.security.UserDetailsImpl;
 import jakarta.transaction.Transactional;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class CommentService {
     private final CommentRepository commentRepository;
     private final PostRepository postRepository;
+    private final UserRepository userRepository;
 
-    public CommentService(CommentRepository commentRepository, PostRepository postRepository) {
-        this.commentRepository = commentRepository;
-        this.postRepository = postRepository;
-    }
 
     @Transactional
-    public CommentResponseDto createComment(Long postId, CommentRequestDto requestDto, HttpServletRequest request) {
+    public CommentResponseDto createComment(Long postId, CommentRequestDto requestDto, UserDetailsImpl user) {
         Post post = postRepository.findById(postId).orElseThrow(
                 () -> new RuntimeException("입력하신 게시물이 존재하지 않습니다.")
         );
-        String username = request.getUserPrincipal().getName();
+        User byUsername = userRepository.findByUsername(user.getUsername())
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다."));
 
-        Comment comment = new Comment(requestDto, post, username);
+        Comment comment = new Comment(requestDto, post, byUsername);
         comment.setPost(post);
         Comment saveComment = commentRepository.save(comment);
         System.out.println(postId + "번 게시물에 댓글이 등록되었습니다.");
@@ -40,24 +41,22 @@ public class CommentService {
     }
 
     @Transactional
-    public List<CommentResponseDto> getAllComments(Long postId) {
-        Post post = postRepository.findById(postId).orElseThrow(
-                () -> new RuntimeException("입력하신 게시물이 존재하지 않습니다.")
-        );
+    public List<CommentResponseDto> findAllComments(Long postId) {
+        List<Comment> commentList = commentRepository.findByPostId(postId);
 
-        List<Comment> commentList = commentRepository.findByPost(post);
         return commentList.stream()
+                .sorted(Comparator.comparing(Comment::getCreatedAt).reversed())
                 .map(CommentResponseDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public CommentResponseDto updateComment(Long id,
                                             Long postId,
                                             CommentRequestDto requestDto,
-                                            HttpServletRequest request) {
+                                            UserDetailsImpl user) {
 
-        Post post = postRepository.findById(postId).orElseThrow(
+        postRepository.findById(postId).orElseThrow(
                 () -> new IllegalArgumentException("입력하신 게시물이 존재하지 않습니다.")
         );
 
@@ -65,9 +64,9 @@ public class CommentService {
                 () -> new IllegalArgumentException("댓글을 찾을 수 없습니다.")
         );
 
-        String username = request.getUserPrincipal().getName();
-        if (!comment.getUsername().equals(username)) {
-            throw new SecurityException("본인의 댓글만 수정할 수 있습니다.");
+        String username = user.getUsername();
+        if (!comment.getUser().getUsername().equals(username)) {
+            throw new RuntimeException("본인의 댓글만 수정할 수 있습니다.");
         }
 
         comment.update(requestDto);
@@ -77,7 +76,7 @@ public class CommentService {
     @Transactional
     public String deleteComment(Long id,
                               Long postId,
-                              HttpServletRequest request) {
+                              UserDetailsImpl user) {
         postRepository.findById(postId).orElseThrow(
                 () -> new RuntimeException("올바른 게시물을 선택해주세요.")
         );
@@ -86,8 +85,8 @@ public class CommentService {
                 () -> new IllegalArgumentException("삭제할 댓글이 없습니다.")
         );
 
-        String username = request.getUserPrincipal().getName();
-        if (!comment.getUsername().equals(username)) {
+        String username = user.getUsername();
+        if (!comment.getUser().getUsername().equals(username)) {
             throw new SecurityException("본인의 댓글만 삭제할 수 있습니다.");
         }
 
